--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -3,7 +3,7 @@
 <hr />
 <h3>The Lion King</h3>
 <p>A classic Disney film, The Lion King was perpetually playing in my childhood home.</p>
-<H3>Herculies</H3>
+<H3>Hercules</H3>
 <p>Another Disney film, I'm around 90% sure I wore the VHS tape out on this one.</p>
 <h3>James and the Giant Peach</h3>
 <p>I am not sure who made this one, but it was another constant in my rotation. It doesn't hurt that I share a name with the titular character.</p>
