--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h1>Mason Honey's Web Developer Portfolio</h1>
+        <h1>Mason's Web Developer Portfolio</h1>
         <h2>Showcasing my progress as a self taught web dev</h2>
         <hr />
         <h3><a href="./public/movie-ranking.html">My Childhood Movie List Project</a></h3>
